assets/stylesheets/main.css
/* http://meyerweb.com/eric/tools/css/reset/
   v2.0 | 20110126
   License: none (public domain)
*/

*,
html,
body {
  margin: 0;
  padding: 0;
  border: 0;
  outline: 0;
  font-size: 2em;
  font: inherit;
  vertical-align: baseline;
}


ul {
  list-style: none;
}




/*
  ========================================
  Custom styles
  ========================================
*/

body {
  background: #EBEBEB;
  color: #888;
  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif !important;
}

.site {
  display: flex;
  min-height: 100vh;
  flex-direction: column;
}

.site-content {
  flex: 1;
}

/*
  ========================================
  Grid
  ========================================
*/

*,
*:before,
*:after {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}


/*
  ========================================
  Typography
  ========================================
*/

h1,
h2,
h3,
h4 {
  color: #888;
  padding: 10px;
  margin: 10px;
}


p {
  margin: 10px;
  padding: 10px;
}

h1 {
  line-height: 24px;
  float: left;
}

h2 {
  line-height: 44px;
}



h5 {
  color: #a9b2b9;
  font-weight: 400;
  margin-bottom: 10px;
  margin-top: 10px;
  text-transform: uppercase;
}

strong {
  font-weight: 400;
}

cite,
em {
  font-style: italic;
}

/*
  ========================================
  Links
  ========================================
*/

a {
  color: #a9b2b9;
  text-decoration: none;
}

a:hover {
  color: #888;
}

p a {
  border-bottom: 1px solid #dfe2e5;
}

/*
  ========================================
  Primary header
  ========================================
*/

footer {
  height: 40px;
  background: #042c2e;
}


footer .nav-link {
  color: rgba(255, 255, 255, .5)
}

footer .nav-link:hover {
  color: #a9b2b9;
}


/*
  ===============
  Social links
  ===============
*/

.social-links img {
  height: 2.5em;
  padding: 10px 0 0 15px;
}

.social-links {
  text-align: right;
}

#twitter {
  margin-right: 10px;
}



/*
  ========================================
  Home
  ========================================
*/

.container-fluid {
  margin: 0 auto;
  padding-left: 15px;
  padding-right: 20px;
  font-size: 1.2em;
  line-height: 28px;
}

.container {
  margin: 0 auto;
  padding-left: 15px;
  padding-right: 20px;
  font-size: 1em;
  line-height: 28px;
}

.aboutme-text {
  margin: 6vh 25vh;
  font-size: 0.9em;
}

.aboutme-text>p {
  margin-bottom: 0;
}

/*
  =================================
  Qualifications & Skills
  =================================
*/

.skills-grid {
  display: grid;
  grid-template-columns: 2fr 1fr;
  padding: auto;
  background-color: rgb(235, 235, 235);
}

.jigsaw {
  grid-column: 1/2;
  height: 90vh;

}

.jigsaw-view {
  grid-column: 2/3;
}

.output-div {
  display: none;
  background-color: #f5f5f5;
  margin: 3vh;
  border-radius: 0.4em;
}

.output-div ul {
  list-style-type: disc;
  padding-left: 3vw;
}

@media (max-width: 576px) {
  .jigsaw {
    display: none;
  }

  .jigsaw-mobile {
    display: block
  }

  .skills-grid {
    display: grid;
    grid-template-columns: 1fr;
    padding: auto;
    background-color: rgb(235, 235, 235);
  }

}

@media (min-width: 576px) {
  .jigsaw-mobile {
    display: none;
  }

}

/*
  ==================
  Experience
  ==================
*/

.timeline-title {
  padding-left: 24px
}

table {
  margin: auto;
  width: 100%;
}

table:last-child {
  margin-bottom: 0;
}

th,
td {
  padding-bottom: 8px;
  vertical-align: top;
}

th {
  width: 20%;
}

td img {
  height: 20px;
}

td h4,
td p {
  padding: 0;
  margin: 0;
}



@media (max-width: 576px) {
  .dot {
    display: none;
    padding: 0;
  }


  th {
    padding-right: 4vw;
  }

}

tbody th {
  color: #a9b2b9;
  font-size: 1.2em;
  font-weight: 400;
  padding-top: 22px;
}

tbody td {
  border-top: 1px solid #dfe2e5;
  padding-top: 21px;
}

tbody td:first-of-type {
  padding-right: 15px;

}

tbody td:last-of-type {
  padding-left: 40px;
  border-left: 1px solid #a9b2b9;
}


table a {
  color: #888;
}

table h4 {
  margin-bottom: 0;
  font-size: 1.2em;
}

.current {
  font-weight: 600;
  color: #7c0d2f;
}

date {
  text-transform: uppercase;
  font-size: 0.8em;
}

/*
  ==================
  Work
  ==================
*/


.work-item {
  position: relative;
  width: 90%;
  padding-top: 10px;
  ;
  margin: auto;
}

.work-img {
  opacity: 1;
  display: block;
  width: 100%;
  height: auto;
  transition: .5s ease;
  backface-visibility: hidden;
}

.overlay {
  transition: .5s ease;
  opacity: 0;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  text-align: center;
}

.work-item:hover .work-img {
  opacity: 0.3;
}

.work-item:hover .overlay {
  opacity: 1;
}

.text {
  background-color: #7c0d2f;
  color: white;
  font-size: 0.6em;
  padding: 5px 5px;
}

.text a {
  color: #dfe2e5
}

.text a:hover {
  text-decoration: none;
  color: #a9b2b9
}

